--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ authors = ["Hongze Xia <hongze.x@gmail.com>"]
 
 [dependencies]
 clap = "3.0.0-beta.4"
+hyper = { version = "0.14", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
