--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["Hongze Xia <hongze.x@gmail.com>"]
 [dependencies]
 clap = "3.0.0-beta.4"
 reqwest = "0.11.5"
+rocket = { version = "0.5.0-rc.1", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
