--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Hongze Xia <hongze.x@gmail.com>"]
 
 [dependencies]
 clap = "3.0.0-beta.4"
-reqwest = "0.11.5"
+reqwest = {version="0.11.5", features=["blocking"]}
 hostname = "0.3.1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
