--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,19 +1,19 @@
-[development]
-address = "localhost"
+[debug]
+address = "127.0.0.1"
 port = 8000
 workers = 1
-log = "debug"
+log_level = "debug"
 # secret_key = "sercret
 # limits = { forms = 32768 }
 
 [staging]
 address = "0.0.0.0"
-port = 80
+port = 8080
 workers = 1
-log = "normal"
+log_level = "normal"
 
-[production]
+[release]
 address = "0.0.0.0"
 port = 8080
 workers = 1
-log = "critical"
+log_level = "critical"
