--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["Hongze Xia <hongze.x@gmail.com>"]
 [dependencies]
 clap = "3.0.0-beta.4"
 hyper = { version = "0.14.13", features = ["client", "http1", "http2"]}
+hyper-tls = "0.5"
 # reqwest = {version="0.11.5", features=["blocking"]}
 hostname = "0.3.1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
