--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Hongze Xia <hongze.x@gmail.com>"]
 
 [dependencies]
 clap = "3.0.0-beta.4"
+futures = "0.3.17"
 hyper = { version = "0.14.13", features = ["client", "http1", "http2"]}
 hyper-tls = "0.5"
 # reqwest = {version="0.11.5", features=["blocking"]}
